--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MP_PUBLIC_KEY=TEST-b9b171df-5e0a-4b81-bae1-825813faae10
+MP_ACCESS_TOKEN=TEST-4977687855042016-032315-deaf23b6ae4764c53032dfd64e21c308-1094673386
+
+
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
